Change location to Tuebingen.

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   name             : "Catherine Chen"
   avatar           : "profile.jpg"
   bio              : "" # TODO
-  location         : "Munich, Germany"
+  location         : "Tuebingen, Germany"
   employer         :
   googlescholar    :
   email            : "cc27@alumni.princeton.edu"
