Update project formatting and change location to Berkeley PhD.

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   name             : "Catherine Chen"
   avatar           : "profile.jpg"
   bio              : "" # TODO
-  location         : "Tuebingen, Germany"
+  location         : "Berkeley, California, USA"
   employer         :
   googlescholar    :
   email            : "cc27@alumni.princeton.edu"
