--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "cathy-chen-5851a6a0/"
+  linkedin         : "https://www.linkedin.com/in/catherine-chen-5851a6a0/"
   orcid            :
   pinterest        :
   soundcloud       :
