--- a/_config.yml
+++ b/_config.yml
@@ -93,12 +93,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "cchen23"
+  github           : #"cchen23"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/catherine-chen-5851a6a0/"
+  linkedin         : "www.linkedin.com/in/catherine-chen-5851a6a0"
   orcid            :
   pinterest        :
   soundcloud       :
