--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "cchen23"
+  twitter          : "cathychen23"
   vine             :
   weibo            :
   xing             :
