--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Catherine Chen"
-  avatar           : "berkeley_marina.jpeg"
+  avatar           : "berkeley_marina_cropped.jpeg"
   bio              : "" # TODO
   location         : "Berkeley, California, USA"
   employer         :
