More grad updates.

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   name             : "Catherine Chen"
   avatar           : "berkeley_marina_cropped.jpeg"
   bio              : "" # TODO
-  location         : "Berkeley, California, USA"
+  location         : "Princeton, NJ, USA"
   employer         :
   googlescholar    :
   email            : "cc27@alumni.princeton.edu"
